# plugin-alconna

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docs.md  exam.py  intro.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/actions/setup-python/: action.yml
.github/workflows/: auto-merge.yml  release.yml  ruff.yml  test.yml
example/: .env.prod  bot.py  pyproject.toml
example/plugins/: demo.py
src/nonebot_plugin_alconna/: __init__.py  analyser.py  argv.py  config.py  consts.py  extension.py  matcher.py  matcher.pyi  message.py  model.py  params.py  pattern.py  rule.py  shortcut.py  tools.py  typings.py  uniseg.py  util.py
src/nonebot_plugin_alconna/adapters/: __init__.py  bilibili.py  console.py  ding.py  discord.py  dodo.py  feishu.py  github.py  kook.py  kritor.py  mail.py  minecraft.py  mirai.py  mirai2.py  ntchat.py  onebot.py  onebot11.py  onebot12.py  qq.py  qqguild.py  red.py  satori.py  spigot.py  tailchat.py  telegram.py  villa.py
src/nonebot_plugin_alconna/builtins/extensions/: __init__.py  discord.py  markdown.py  onebot11.py  permission.py  reply.py  shortcut.py  telegram.py
src/nonebot_plugin_alconna/builtins/plugins/: echo.py  help.py  lang.py
src/nonebot_plugin_alconna/builtins/plugins/echo/: __init__.py  config.py
src/nonebot_plugin_alconna/builtins/plugins/help/: __init__.py  config.py
src/nonebot_plugin_alconna/builtins/plugins/switch/: __init__.py  config.py
src/nonebot_plugin_alconna/builtins/plugins/with/: __init__.py  config.py  extension.py
src/nonebot_plugin_alconna/builtins/uniseg/: chronocat.py  markdown.py  market_face.py  music_share.py
src/nonebot_plugin_alconna/i18n/: .config.json  .lang.schema.json  .template.json  .template.schema.json  __init__.py  en-US.json  model.py  zh-CN.json
src/nonebot_plugin_alconna/uniseg/: __init__.py  builder.py  const.py  constraint.py  export.py  exporter.py  fallback.py  functions.py  loader.py  message.py  message.pyi  params.py  receipt.py  rule.py  saa.py  segment.py  target.py  template.py  tools.py
src/nonebot_plugin_alconna/uniseg/adapters/: __init__.py  bilibili.py  console.py  ding.py  discord.py  dodo.py  feishu.py  github.py  kook.py  minecraft.py  mirai.py  ntchat.py  onebot11.py  onebot12.py  qq.py  qqguild.py  red.py  satori.py  telegram.py  villa.py
src/nonebot_plugin_alconna/uniseg/adapters/bilibili/: __init__.py  builder.py  exporter.py
src/nonebot_plugin_alconna/uniseg/adapters/bililive/: __init__.py  builder.py  exporter.py
src/nonebot_plugin_alconna/uniseg/adapters/console/: __init__.py  builder.py  exporter.py
src/nonebot_plugin_alconna/uniseg/adapters/ding/: __init__.py  builder.py  exporter.py
src/nonebot_plugin_alconna/uniseg/adapters/discord/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/dodo/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/efchat/: __init__.py  builder.py  exporter.py
src/nonebot_plugin_alconna/uniseg/adapters/feishu/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/gewechat/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/github/: __init__.py  builder.py  exporter.py
src/nonebot_plugin_alconna/uniseg/adapters/heybox/: __init__.py  builder.py  exporter.py
src/nonebot_plugin_alconna/uniseg/adapters/kook/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/kritor/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/mail/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/milky/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/minecraft/: __init__.py  builder.py  exporter.py
src/nonebot_plugin_alconna/uniseg/adapters/mirai/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/mirai2/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/nonebug/: __init__.py  builder.py  exporter.py
src/nonebot_plugin_alconna/uniseg/adapters/ntchat/: __init__.py  builder.py  exporter.py
src/nonebot_plugin_alconna/uniseg/adapters/onebot11/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/onebot12/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/qq/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/red/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/satori/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/tailchat/: __init__.py  builder.py  exporter.py  target.py
src/nonebot_plugin_alconna/uniseg/adapters/telegram/: __init__.py  builder.py  exporter.py
src/nonebot_plugin_alconna/uniseg/adapters/vocechat/: __init__.py  builder.py  exporter.py
src/nonebot_plugin_alconna/uniseg/i18n/: .config.json  .lang.schema.json  .template.json  .template.schema.json  __init__.py  en-US.json  zh-CN.json
src/nonebot_plugin_alconna/uniseg/utils/: data.json  filehost.py  fleep.py  matcher.py  saa.py
src/test/: .env  .env.prod  bot.py  dc.py  parser.py  pyproject.toml  rule.py  tg.py  typings.py  uniseg.py
src/test/plugins/: demo.py
tests/: conftest.py  fake.py  test_aliases.py  test_builtin_plugin.py  test_buttons.py  test_context.py  test_dc.py  test_extension.py  test_filehost_apply.py  test_fleep_vendor.py  test_funcommand.py  test_gotpath.py  test_i18n.py  test_koishi_command.py  test_koishi_command.yml  test_koishi_command1.yml  test_kook.py  test_mc.py  test_onebot.py  test_parser.py  test_qq.py  test_qqguild.py  test_ref.py  test_saa_patch.py  test_satori.py  test_target_scope.py  test_tg.py  test_typings.py  test_uniseg.py  test_unmatch.py  test_use_origin.py
(+6 files in other folders)
