[project]
name = "nonebot-plugin-alconna"
description = "Alconna Adapter for Nonebot"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "tarina>=0.5.4",
    "nepattern>=0.7.4",
    "arclet-alconna>=1.8.19",
    "arclet-alconna-tools>=0.7.6",
    "importlib-metadata>=4.13.0",
    "nonebot2>=2.3.0",
    "nonebot-plugin-waiter>=0.6.0",
]
dynamic = ["version"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "command",
    "alconna",
    "nonebot",
]
[project.urls]
homepage = "https://github.com/nonebot/plugin-alconna"
repository = "https://github.com/nonebot/plugin-alconna"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.4.2",
    "loguru>=0.7.2",
    "ruff>=0.4.2",
    "nonemoji>=0.1.4",
    "pre-commit>=3.7.0",
    "nonebug>=0.3.7",
    "pytest-xdist>=3.6.1",
    "pytest-asyncio>=0.23.6",
    "fastapi>=0.110.2",
    "uvicorn[standard]>=0.28.1",
    "pydantic>=2.7.0",
    "nonebot2[httpx,websockets]>=2.3.0",
    "nonebot-adapter-console>=0.5.0",
    "nonebot-adapter-ding>=2.0.0a16",
    "nonebot-adapter-discord>=0.1.8",
    "nonebot-adapter-dodo>=0.2.1",
    "nonebot-adapter-feishu>=2.6.0",
    "nonebot-adapter-kaiheila>=0.3.4",
    "nonebot-adapter-mirai>=2.3.2",
    "nonebot-adapter-mirai2>=0.0.22",
    "nonebot-adapter-minecraft>=1.2.2",
    "nonebot-adapter-onebot>=2.4.3",
    "nonebot-adapter-qq>=1.4.4",
    "nonebot-adapter-red>=0.9.0",
    "nonebot-adapter-satori>=0.12.3",
    "nonebot-adapter-telegram>=0.1.0b17",
    "nonebot-adapter-kritor>=0.1.1",
    "nonebot-adapter-tailchat>=0.1.0b7",
    "nonebot-plugin-filehost>=1.1.1",
    "nonebot-plugin-send-anything-anywhere>=0.6.1",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
]
[tool.pdm.build]
includes = ["src/nonebot_plugin_alconna"]

[tool.pdm.version]
source = "file"
path = "src/nonebot_plugin_alconna/__init__.py"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.pdm.scripts]
test = "pytest -v -n 2 -W ignore ./tests/"
format = { composite = ["isort ./src/ ./example/ ./tests/","black ./src/ ./example/ ./tests/","ruff check ./src/ ./example/ ./tests/"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
