[project]
name = "nonebot_plugin_test"
version = "0.1.0"
description = "nonebot_plugin_test"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" }
]
plugins = ["nonebot_plugin_alconna"]
plugin_dirs = []
builtin_plugins = []
